# stk-addons-pack

./: .gitignore  CMakeLists.txt  README
android/: Android.mk  AndroidManifest.xml  README.ANDROID  generate_assets.sh  make.sh
cmake/: FindEGL.cmake  FindGLES.cmake  FindTurboJPEG.cmake  Toolchain-android.cmake
data/: draw_text.frag  draw_texture.frag  draw_texture.vert  extract_settings.txt  progress_bar.frag  progress_bar.vert
src/: button.cpp  button.hpp  context_egl.cpp  context_egl.hpp  device.cpp  device.hpp  device_android.cpp  device_android.hpp  device_linux.cpp  device_linux.hpp  device_manager.cpp  device_manager.hpp  draw_utils.cpp  draw_utils.hpp  events.hpp  file_manager.cpp  file_manager.hpp  font_manager.cpp  font_manager.hpp  image_loader.cpp  image_loader.hpp  image_loader_jpg.cpp  image_loader_jpg.hpp  image_loader_png.cpp  image_loader_png.hpp  loader_jpg.cpp  loader_jpg.hpp  loader_png.cpp  loader_png.hpp  main.cpp  progress_bar.cpp  progress_bar.hpp  scene_main.cpp  scene_main.hpp  scene_manager.cpp  scene_manager.hpp  shader.cpp  shader.hpp  texture_manager.cpp  texture_manager.hpp
